--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
           <!-- BOTÓN DONAR -->
           <li class="nav-item">
-            <a class="btn btn-danger ms-lg-3 px-4" href="donar.html">
+            <a class="btn btn-danger ms-lg-3 px-4" href="donate.html">
               Donar aquí
             </a>
           </li>
