--- a/index.html
+++ b/index.html
@@ -2105,6 +2105,63 @@
               </div>
             </article>
 
+            <!-- ================= DONACIÓN DE PLASMA ================= -->
+            <article id="submenuAferesis" class="section-article">
+              <div id="donacion-plasma" style="background-color: #fff"
+                class="ds-1col entity entity-paragraphs-item paragraphs-item-column 12-columns anchor_link col-md-12 view-mode-full clearfix">
+                <!-- TÍTULO -->
+                <div
+                  class="field field-name-field-paragraph-title field-type-text field-label-hidden">
+                  <div class="field-items">
+                    <div class="field-item even">
+                      <h2>Donacion por aferesis</h2>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- CONTENIDO -->
+                <div id="column--11" class="group-paragraph field-group-div">
+                  <div
+                    class="paragraphs-items paragraphs-items-field-subparagraphs paragraphs-items-field-subparagraphs-full paragraphs-items-full">
+                    <div
+                      class="field field-name-field-subparagraphs field-type-paragraphs field-label-hidden">
+                      <div class="field-items">
+                        <div class="field-item even" property>
+                          <div class="pa_banner_info_home codig" style="
+                              background: url(https://www.comunidad.madrid/sites/default/files/doc/sanidad/comu/banner_0.png);
+                              background-size: cover;
+                              background-position: center;
+                            ">
+                            <div class="field-group-div content">
+                              <div class="tx-banner">
+                                <div
+                                  class="field field-name-field-title field-type-text field-label-hidden">
+                                  <div class="field-items">
+                                    <div class="field-item even">
+                                      Necesitamos donantes de plasma
+                                    </div>
+                                  </div>
+                                </div>
+
+                                <div
+                                  class="field field-name-field-link field-type-link-field field-label-hidden">
+                                  <div class="field-items">
+                                    <div class="field-item even">
+                                      <a href> Infórmate aquí </a>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+
             <article id="aferesis-plaquetas" class="mb-5 hacemos-tu-sangre">
 
               <h2 class="section-title">
